8249603: C1: assert(has_error == false) failed: register allocation invalid

Added bailout in combine_spilled_intervals() to avoid an overlap between two intervals

Reviewed-by: kvn, thartmann