src/hotspot/share/c1/c1_LinearScan.cpp
@@ -4542,6 +4542,18 @@ bool Interval::has_hole_between(int hole_from, int hole_to) {
   return false;
 }
 
+// Check if there is an intersection with any of the split children of 'interval'
+bool Interval::intersects_any_children_of(Interval* interval) const {
+  if (interval->_split_children != NULL) {
+    for (int i = 0; i < interval->_split_children->length(); i++) {
+      if (intersects(interval->_split_children->at(i))) {
+        return true;
+      }
+    }
+  }
+  return false;
+}
+
 
 #ifndef PRODUCT
 void Interval::print(outputStream* out) const {
@@ -5722,6 +5734,13 @@ void LinearScanWalker::combine_spilled_intervals(Interval* cur) {
     return;
   }
   assert(register_hint->canonical_spill_slot() != -1, "must be set when part of interval was spilled");
+  assert(!cur->intersects(register_hint), "cur should not intersect register_hint");
+
+  if (cur->intersects_any_children_of(register_hint)) {
+    // Bail out if cur intersects any split children of register_hint, which have the same spill slot as their parent. An overlap of two intervals with
+    // the same spill slot could result in a situation where both intervals are spilled at the same time to the same stack location which is not correct.
+    return;
+  }
 
   // modify intervals such that cur gets the same stack slot as register_hint
   // delete use positions to prevent the intervals to get a register at beginning
